# Meta-AI

./: .cursorignore  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.metaai  Dockerfile.prod  Makefile  README.md  RUN_GRADIO_APP.bat  TODO.md  backend_api_main.py  dashboard_v3.py  docker-compose.enterprise.yml  docker-compose.metaai.yml  docker-compose.yml  kubernetes_deployment.yaml  meta_learner_memory.json  pyproject.toml  pytest.ini  quick_start.py  requirements-dev.txt  requirements.txt
agents/: chat_agent.py  data_agent.py  decision_history.json  evaluation_agent.py  memory_manager.py  model_agent.py  orchestrator_agent.py  real_agents.py  risk_agent.py  strategy_agent.py  training_agent.py
api/: fastapi_server.py
app/: __init__.py  config.py  main.py
chatbot/: bot.py  openai_agent.py
core/: advanced_data_informer.py  advanced_features.py  advanced_integration.py  adversarial_engine.py  agent_insight.py  agentic_report.py  agentic_researcher.py  auto_feature_engineer.py  auto_pilot.py  benchmark.py  black_box_breaker.py  business_impact.py  data_loader.py  data_profiling.py  data_validation.py  deep_learning.py  deployment_guard.py  drift_detection_advanced.py  drift_detector.py  elite_trainer.py  ensemble_compression.py  evolutionary_autopilot.py  explainability.py  failure_analysis.py  forensic_cleaner.py  llm_advisor.py  meta_learner.py  model_card.py  model_governance.py  model_selector_llm.py  model_training.py  model_versioning.py  monitoring_alerts.py  optimization.py  pipeline_orchestrator.py  production_export.py  (+9 more)
(+95 files in other folders)
